# parameterspace

./: .gitignore  .pre-commit-config.yaml  3rd-party-licenses.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  mkdocs.yml  pylintrc  pyproject.toml  setup.py  versions.json
.github/workflows/: python.yaml
docs/: generate_references.py  index.md
docs/notebooks/: example_1.ipynb  example_2_simple_parameterspace.ipynb  example_3_conditional_spaces.ipynb
docs/parameterspace/: condition.md  parameterspace.md  utils.md
docs/parameterspace/parameters/: base.md  categorical.md  continuous.md  integer.md  ordinal.md
docs/parameterspace/priors/: base.md  beta.md  categorical.md  normal.md  truncated_normal.md  uniform.md
docs/parameterspace/transformations/: base.md  categorical.md  log_zero_one.md  zero_one.md
latest/: 404.html  index.html
latest/API-Reference/base/: index.html
latest/API-Reference/condition/: index.html
latest/API-Reference/configspace_utils/: index.html
latest/API-Reference/parameterspace/: index.html
latest/API-Reference/utils/: index.html
latest/generate_references/: index.html
latest/notebooks/example_1/: index.html
latest/notebooks/example_2_simple_parameterspace/: index.html
latest/notebooks/example_3_conditional_spaces/: index.html
parameterspace/: __init__.py  base.py  condition.py  configspace_utils.py  parameterspace.py  utils.py
parameterspace/parameters/: __init__.py  base.py  categorical.py  continuous.py  integer.py  ordinal.py
parameterspace/priors/: __init__.py  base.py  beta.py  categorical.py  normal.py  truncated_normal.py  uniform.py
parameterspace/transformations/: __init__.py  base.py  categorical.py  log_zero_one.py  zero_one.py
tests/: test_condition.py  test_configspace_utils.py  test_parameterspace.py  test_utils.py
tests/parameters/: test_base.py  test_categorical.py  test_continuous.py  test_integer.py  test_ordinal.py  util.py
tests/priors/: test_base.py  test_beta.py  test_categorical.py  test_normal.py  test_truncated_normal.py  test_uniform.py
tests/transformations/: test_base.py  test_categorical.py  test_jacobian_factor.py  test_log_zero_one.py  test_zero_one.py  util.py
v0.10.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.10.0/API-Reference/base/: index.html
v0.10.0/API-Reference/condition/: index.html
v0.10.0/API-Reference/configspace_utils/: index.html
v0.10.0/API-Reference/parameterspace/: index.html
v0.10.0/API-Reference/utils/: index.html
v0.10.0/assets/: extra.css
v0.10.0/generate_references/: index.html
v0.10.0/notebooks/example_1/: index.html
v0.10.0/notebooks/example_2_simple_parameterspace/: index.html
v0.10.0/notebooks/example_3_conditional_spaces/: index.html
v0.10.0/search/: search_index.json
v0.10.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.10.1/API-Reference/base/: index.html
v0.10.1/API-Reference/condition/: index.html
v0.10.1/API-Reference/configspace_utils/: index.html
v0.10.1/API-Reference/parameterspace/: index.html
v0.10.1/API-Reference/utils/: index.html
v0.10.1/generate_references/: index.html
v0.10.1/notebooks/example_1/: index.html
v0.10.1/notebooks/example_2_simple_parameterspace/: index.html
v0.10.1/notebooks/example_3_conditional_spaces/: index.html
v0.10.1/search/: search_index.json
v0.10.2/: 404.html  index.html  sitemap.xml
v0.10.2/API-Reference/base/: index.html
v0.10.2/API-Reference/condition/: index.html
v0.10.2/API-Reference/configspace_utils/: index.html
v0.10.2/API-Reference/parameterspace/: index.html
v0.10.2/API-Reference/utils/: index.html
v0.10.2/generate_references/: index.html
v0.10.2/notebooks/example_1/: index.html
v0.10.2/notebooks/example_2_simple_parameterspace/: index.html
v0.10.2/notebooks/example_3_conditional_spaces/: index.html
v0.10.2/search/: search_index.json
v0.7.11/: 404.html  index.html  sitemap.xml
v0.7.11/API-Reference/base/: index.html
v0.7.11/API-Reference/condition/: index.html
v0.7.11/API-Reference/parameterspace/: index.html
v0.7.11/API-Reference/utils/: index.html
v0.7.11/generate_references/: index.html
v0.7.11/notebooks/example_1/: index.html
v0.7.11/notebooks/example_2_simple_parameterspace/: index.html
v0.7.11/notebooks/example_3_conditional_spaces/: index.html
v0.7.11/search/: search_index.json
v0.7.12/: 404.html  index.html  sitemap.xml
v0.7.12/API-Reference/base/: index.html
v0.7.12/API-Reference/condition/: index.html
v0.7.12/API-Reference/parameterspace/: index.html
v0.7.12/API-Reference/utils/: index.html
v0.7.12/generate_references/: index.html
v0.7.12/notebooks/example_1/: index.html
v0.7.12/notebooks/example_2_simple_parameterspace/: index.html
v0.7.12/notebooks/example_3_conditional_spaces/: index.html
v0.7.12/search/: search_index.json
v0.7.13/: 404.html  index.html  sitemap.xml
v0.7.13/API-Reference/base/: index.html
v0.7.13/API-Reference/condition/: index.html
v0.7.13/generate_references/: index.html
v0.7.13/search/: search_index.json
v0.7.14/: 404.html  index.html  sitemap.xml
v0.7.14/generate_references/: index.html
v0.7.14/search/: search_index.json
v0.7.16/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.16/generate_references/: index.html
v0.7.16/search/: search_index.json
v0.7.17/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.17/generate_references/: index.html
v0.7.17/search/: search_index.json
v0.7.18/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.18/generate_references/: index.html
v0.7.18/search/: search_index.json
v0.7.19/: 404.html  index.html  sitemap.xml
v0.7.19/generate_references/: index.html
v0.7.19/search/: search_index.json
v0.7.20/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.20/generate_references/: index.html
v0.7.20/search/: search_index.json
v0.9.0/: 404.html  index.html  sitemap.xml
v0.9.0/generate_references/: index.html
v0.9.0/search/: search_index.json
v0.9.1/: 404.html  index.html  sitemap.xml
v0.9.1/generate_references/: index.html
v0.9.1/search/: search_index.json
(+281 files in other folders)
