[tool.poetry]
name = "parameterspace"
version = "0.10.1"
description = "Parametrized hierarchical spaces with flexible priors and transformations."
readme = "README.md"
repository = "https://github.com/boschresearch/parameterspace"
authors = ["Bosch Center for AI, Robert Bosch GmbH"]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.26.0"
scipy = ">=1.14.0"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
isort = "^5.12.0"
mkdocs = "^1.6.1"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-gen-files = "^0.5.0"
mkdocs-material = "^9.6.7"
mkdocstrings = {version="^0.26.0", extras=["python-legacy"]}
mkdocs-jupyter = "^0.25.1"
mypy = "^1.15.0"
pylint = "^3.3.5"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pre-commit = "^3.3.2"
dill = "^0.3.6"
pytest-rerunfailures = "^15.0.0"
num2tex = "^0.8"
mike = "^2.1.3"
pydocstyle = "^6.3.0"
configspace = "^1.2.1"

[tool.poetry.extras]
examples = ["notebook", "matplotlib"]

[tool.pytest.ini_options]
filterwarnings = ["error::DeprecationWarning", "error::PendingDeprecationWarning"]
markers = ["integration_test: Execute API calls."]
addopts = "-m 'not integration_test'"

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true
exclude = 'site/generate_references.py'

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
extension-pkg-whitelist = ["pydantic", "numpy", "scipy"]
disable = [
    # Switched off to be less aggressive
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "logging-not-lazy",
    "logging-format-interpolation",
    "logging-fstring-interpolation",
    "duplicate-code",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-few-public-methods",
    "too-many-locals",
    "protected-access"
]

[tool.pydocstyle]
convention = "google"
add-ignore = "D105"
match = '(?!test_|__init__).*\.py'
match-dir = '[^\tests].*'

[tool.coverage.run]
source = ['parameterspace']
relative_files = true
branch = true

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
